# athanor-lite

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  ASSESSMENT-2026-07-03.md  DESIGN.md  RELEASE.md
docs/assessment-2026-07-03-annexes/: A1-fragility-audit.md  A2-market-landscape.md  A3-novice-walkthrough.md  A4-power-user-audit.md  A5-moat-analysis.md
signing/: SETUP.md  metadata.json  sign-athanor.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.lite.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: athanor_license.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/benchmark/: mod.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/downloads/: mod.rs  ollama.rs
src-tauri/src/features/: mod.rs
src-tauri/src/hardware/: gpu.rs  mod.rs  telemetry.rs
src-tauri/src/licensing/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/models/: catalog.json  mod.rs  recommend.rs  templates.json  templates.rs
src-tauri/src/ops/: mod.rs
src-tauri/src/portable/: mod.rs
src-tauri/src/preferences/: mod.rs
src-tauri/src/prompts/: curated.json  mod.rs
src-tauri/src/rag/: chunk.rs  embed.rs  extract.rs  mod.rs  store.rs
src-tauri/src/runtime/: api.rs  guard.rs  mod.rs  server.rs
src-tauri/src/share/: mod.rs
src-tauri/src/training/: mod.rs
src-tauri/src/uistate/: mod.rs
src-tauri/src/workspaces/: mod.rs
src/components/: ArcGauge.tsx  BenchmarkPanel.tsx  BootSequence.tsx  Coach.tsx  Icons.tsx  LightLine.tsx  Markdown.tsx  NavRail.tsx  Onboarding.tsx  OpsDrawer.tsx  PowerRing.tsx  PromptLibrary.tsx  SegmentBar.tsx  SettingsSheet.tsx  Sparkline.tsx  StatusPill.tsx  Titlebar.tsx
src/lib/: brand.ts  coach.ts  designHarness.ts  edition.ts  format.ts  ipc.ts  tauriEnv.ts  theme.ts  types.ts  useTween.ts
src/state/: store.ts
src/styles/: app.css  base.css  tokens.css
src/views/: Chat.tsx  Compare.tsx  Dashboard.tsx  Knowledge.tsx  Library.tsx  LiteHome.tsx  Models.tsx  Training.tsx  Workspaces.tsx
