[package]
name = "athanor"
version = "0.1.0"
description = "Athanor — local AI, assembled. Purpose-built AI workspaces on your own hardware."
authors = ["Tony Winslow <tonywinslow@bbasecure.com>"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "athanor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "=0.33.1"
nvml-wrapper = "0.10"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
winreg = "0.55"

[profile.release]
lto = true
codegen-units = 1
strip = true
